# ERP_PR

./: .dockerignore  .env.example  .env.production.example  .gitignore  ConfigTechSouhaitée  SPRINT-PLAN-FRONTEND.md  docker-compose.prod.yml  docker-compose.yml  listePoste.xlsx  plan_tests_master_v2.xlsx  rapport_ecarts_mockup_v1.md  rapport_test_module_projet.md  rapport_test_module_projet_v2.md  rapport_verification_corrections_v5.md  tests_module_projet.xlsx
backend/: .dockerignore  Dockerfile  Dockerfile.prod  celerybeat-schedule  conftest.py  pyproject.toml  tests_consolides_par_module.xlsx  tests_module_projet.xlsx
backend/DataChagenpoint/: 02_clients.xlsx  03_projets.xlsx  06_factures_fournisseurs.xlsx
backend/apps/billing/: admin.py  models.py  serializers.py  services.py  tax_service.py  urls.py  views.py
backend/apps/clients/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/consortiums/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/: admin.py  auth.py  config_views.py  exceptions.py  fields.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  renderers.py  serializer_mixins.py  sidebar_config.py  signals.py  tasks.py  tenant_context.py  urls.py
backend/apps/dashboards/: action_center.py  search.py  services.py  sidebar_badges.py  urls.py  urls_sprint2.py  (+1 more)
backend/config/: asgi.py  celery_app.py  urls.py  wsgi.py
backend/requirements/: base.txt  local.txt
backend/scripts/: cleanup_data_keep_users_and_settings.py  generate_assignments.py  seed_tax_schemes.py
(+588 files in other folders)
